.archive/latest/kubernetes/prod/apps/selfhosted/planka/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planka-opnsense-ingress
  namespace: selfhosted
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_SECRET_PRD_DOMAIN}
    ingress.kubernetes.io/ssl-redirect: "true"
    meta.helm.sh/release-name: planka
    meta.helm.sh/release-namespace: selfhosted
    nginx.ingress.kubernetes.io/custom-http-errors: "418"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "480"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: planka
    app.kubernetes.io/managed-by: Helm
    chart: planka
    helm.toolkit.fluxcd.io/name: planka
    helm.toolkit.fluxcd.io/namespace: selfhosted
    heritage: Helm
    release: planka
spec:
  ingressClassName: external
  rules:
    - host: kanban.${CLUSTER_SECRET_PRD_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: planka
                port:
                  number: 1337
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kanban.${CLUSTER_SECRET_PRD_DOMAIN}
      secretName: "${CLUSTER_SECRET_PRD_DOMAIN/./-}-tls"
